--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -34,4 +39,25 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //UI LIBRARY
+    implementation 'com.google.android.material:material:1.1.0' //For Material Design like navdraw etc
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+    implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
+
+
+    //FAST ANDROID NETWORKING CONNECTION LIBRARY
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //CHART AND GRAPHIC
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.karumi:dexter:6.2.0' //for easy any permission
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
